# sky_bank

./: .env.example  README.md  pyproject.toml
data/: log_file.json  operations.xls
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
